--- a/src/components/InitialHome/initialCover.css
+++ b/src/components/InitialHome/initialCover.css
@@ -1,11 +1,11 @@
 .mask{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
 position: relative;
 }
 
 .into-img{
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background-size: cover;
     background-position: center;
@@ -95,7 +95,7 @@ position: relative;
     .initial-cover .content h2{
         position: relative;
     right: 10rem;
-    bottom: 10rem;  
+    bottom: 2rem;  
         
     
     }
@@ -103,13 +103,13 @@ position: relative;
     .initial-cover .content h1{
         position: relative;
     right: 10rem;
-    bottom: 10rem;  
+    bottom: 2rem;  
        
     }
     .initial-cover .btn{
         position: relative;
         right: 10rem;
-        bottom: 10rem;  
+        bottom: 2rem;  
     }
 
 
