--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -5,7 +5,7 @@ position: relative;
 }
 
 .into-img-about{
-    width: 100%;
+    width: 100vw;
     height: 100%;
     background-size: cover;
     background-position: center;
@@ -15,7 +15,7 @@ position: relative;
 
 .about-initial{
     height: 100%;
-    width: 100%;
+    width: 100vw;
 }
 
 
