--- a/src/components/ProductsCards/WorkStyles.css
+++ b/src/components/ProductsCards/WorkStyles.css
@@ -1,6 +1,6 @@
 .container{
     background-color: rgba(31, 30, 30, 0.8);;
-    
+    width: 100vw;
 }
 .cards{
     position: relative;
@@ -11,6 +11,7 @@
     top: 50%; 
     left: 50%; 
     transform: translate(-50%, -50%);
+    
 }
 
 .into-img-cards{
@@ -31,34 +32,41 @@
 }
 
 .card-container{
-    max-width: 1140px;
-    margin: auto;
+    width: 100%;
     display: grid;
     grid-template-columns: repeat(5,1fr);
-    grid-gap: 15px;
+  gap: 14px;
     padding-bottom: 5rem;
     position: relative;
-    right:  15%;
+   left: -.3rem;
 }
 
 .card{
-    background:#252525;
-;
-    padding: 2rem 2rem;
+    background:#252525;;
+    padding: 1.5rem 1.5rem;
+    width: 250px;
+    display: flow-root;
+    justify-self: center;
+   
     
-
+   
 }
 
 .card img{
-    width: 260px;
+    width: 170px;
     cursor: pointer;
+    text-align: center;
+    position: relative;
+    left: .9rem;
 
 }
 .header-card{
     text-align: center;
     margin-bottom: 2rem;
-    background-color: rgba(39, 39, 39, 0.8);
-    width: 260px;
+    background-color: rgba(44, 44, 44, 0.8);
+    width: 200px;
+    display: flex;
+    justify-content: center;
     
 }
 
@@ -86,7 +94,7 @@
         max-width: 100%;
         margin: auto;
         grid-template-columns: 2fr;
-        width: 130px;
+        width: 360px;
         
     }
 
