--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -64,11 +64,11 @@ font-size: 3rem;
 
   }
 
-@media screen and (max-width:640px){
+
+  @media screen and (max-width:550px){
     .about-mask h2{
-        font-size: 1.75rem;
-        position: absolute;
-        right: 20%;
+        display: none;
+        
         
     
     }
@@ -76,7 +76,30 @@ font-size: 3rem;
     .about-mask p{
         font-size: 1rem;
         position: absolute;
-        top: 45%;
+       
+       
+    }
+}
+
+
+
+
+
+
+
+@media screen and (max-width:640px){
+    .about-mask h2{
+        font-size: 3rem;
+        position: absolute;
+        right: 20%;
+        
+    
+    }
+    
+    .about-mask p{
+        font-size: 19px;
+        position: absolute;
+        top: 50%;
        
     }
 }
