--- a/src/components/About/aboutStyles.css
+++ b/src/components/About/aboutStyles.css
@@ -100,6 +100,6 @@ font-size: 3rem;
         font-size: 19px;
         position: absolute;
         top: 50%;
-       
+       text-align: center;
     }
 }
